<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.doe.compshop.ui.fragments.login.AuthViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragments.registration.RegistrationFragment">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5" />

        <com.github.florent37.shapeofview.shapes.ArcView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@id/guideline1"
            app:layout_constraintTop_toTopOf="parent"
            app:shape_arc_cropDirection="outside"
            app:shape_arc_height="40dp"
            app:shape_arc_position="bottom">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/primaryDarkColor" />

        </com.github.florent37.shapeofview.shapes.ArcView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardView_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginHorizontal="25dp"
            android:elevation="8dp"
            app:cardCornerRadius="15dp"
            app:cardElevation="12dp"
            app:cardMaxElevation="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="15dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="8dp"
                    app:hintEnabled="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editText_firstName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_medium"
                        android:hint="@string/first_name"
                        android:inputType="textPersonName"
                        android:maxLines="1"
                        android:padding="10dp"
                        android:text="@={viewModel.firstName}"
                        android:textSize="18sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayout2"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="8dp"
                    app:hintEnabled="true"
                    app:layout_constraintEnd_toEndOf="@id/textInputLayout"
                    app:layout_constraintStart_toStartOf="@id/textInputLayout"
                    app:layout_constraintTop_toBottomOf="@id/textInputLayout">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editText_lastName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_medium"
                        android:hint="@string/last_name"
                        android:inputType="textPersonName"
                        android:maxLines="1"
                        android:padding="10dp"
                        android:text="@={viewModel.lastName}"
                        android:textSize="18sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayout3"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="8dp"
                    app:hintEnabled="true"
                    app:layout_constraintEnd_toEndOf="@id/textInputLayout2"
                    app:layout_constraintStart_toStartOf="@id/textInputLayout2"
                    app:layout_constraintTop_toBottomOf="@id/textInputLayout2">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editText_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_medium"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:padding="10dp"
                        android:text="@={viewModel.emailAddress}"
                        android:textSize="18sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayout4"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="8dp"
                    app:hintEnabled="true"
                    app:layout_constraintEnd_toEndOf="@id/textInputLayout3"
                    app:layout_constraintStart_toStartOf="@id/textInputLayout3"
                    app:layout_constraintTop_toBottomOf="@id/textInputLayout3">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editText_phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_medium"
                        android:hint="@string/phone_number"
                        android:inputType="phone"
                        android:maxLines="1"
                        android:padding="10dp"
                        android:text="@={viewModel.phoneNumber}"
                        android:textSize="18sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayout5"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="8dp"
                    app:hintEnabled="true"
                    app:layout_constraintEnd_toEndOf="@id/textInputLayout4"
                    app:layout_constraintStart_toStartOf="@id/textInputLayout4"
                    app:layout_constraintTop_toBottomOf="@id/textInputLayout4">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editText_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_medium"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:padding="10dp"
                        android:text="@={viewModel.password}"
                        android:textSize="18sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/button_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="24dp"
                    android:backgroundTint="@color/primaryColor"
                    android:elevation="12dp"
                    android:fontFamily="@font/roboto_bold"
                    android:onClick="@{viewModel::registerUser}"
                    android:padding="10dp"
                    android:text="@string/create_account"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="@id/textInputLayout5"
                    app:layout_constraintStart_toStartOf="@id/textInputLayout5"
                    app:layout_constraintTop_toBottomOf="@id/textInputLayout5" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>

        <LinearLayout
            android:id="@+id/linearLayout_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/cardView_register">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_medium"
                android:gravity="center_horizontal"
                android:text="@string/already_have_an_account"
                android:textColor="@color/textPrimary"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:elevation="12dp"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/sign_in"
                android:textColor="@color/primaryColor"
                android:textSize="17sp" />

        </LinearLayout>

        <ProgressBar
            android:id="@+id/progressBar_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTintMode="src_atop"
            android:elevation="11dp"
            android:indeterminate="true"
            android:indeterminateTint="@color/primaryColor"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>